<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/parent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@drawable/blue_bg">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="55dp"
                android:src="@drawable/logo_negocio"
                />



        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/parte2"
        android:layout_below="@id/parent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/labelA"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/parte3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parte2"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edmail"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                app:startIconDrawable="@drawable/ic_lock">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/parte4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/parte3"
            android:gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"

            >
        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/label_sesion"
            android:drawableTint="#fff"
            android:drawableEnd="@drawable/ic_lock"
            />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/parte5"
        android:layout_below="@id/parte4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/txtNuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/main_blue_color"
            android:gravity="center|center_horizontal"
            android:text="@string/label_registrar"

        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/parte6"
        android:layout_below="@+id/parte5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        >
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/label_olvide"
            />

    </LinearLayout>
</RelativeLayout>